# Mergify

./: .env  .flake8.ini  .mypy.ini  Dockerfile  README.md  pyproject.toml  run.sh
src/: app.py  github_client.py  responses.py  starneighbours.py
src/clients/: github.py
src/models/: starneighbours.py
src/services/: starneighbours.py
tests/unit/: test_starneighbours.py
