[tool.poetry]
name = "stargazer"
version = "0.1.0"
description = ""
authors = ["martin <martin-guyard@live.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
aiohttp = "^3.8.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.991"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
